--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ EMAIL_USER=hthin217@gmail.com
 ORGANIZER_EMAIL=hthin217@gmail.com
 PORT=3000
 RESEND_API_KEY=re_LEwBxR3N_3TgebhtmPSYyD9TimKbjSE3k
+FROM_EMAIL=Lễ Tốt Nghiệp 2025 <noreply@hthin.me> 
+
